# svntogit-community

./: .AURINFO  .SRCINFO  MKPKG  PKGBUILD
aiccu/: PKGBUILD
angband/: PKGBUILD
cutegram/: PKGBUILD
dvdisaster/: PKGBUILD
haskell-hashable/: PKGBUILD  haskell-hashable.install
haskell-pandoc-types/: PKGBUILD
lib32-librsvg/: .SRCINFO  PKGBUILD
libechonest/: .SRCINFO
libfastjson/: .SRCINFO
librelp/: .SRCINFO
libretro-shaders/: MKPKG
libwebrtc/repos/community-testing-x86_64/: args.gn
libwebrtc/trunk/: PKGBUILD  args.gn  gclient-conf
mpop/: PKGBUILD
perl-list-allutils/: .AURINFO
python-hatch/: PKGBUILD
python-selenium/: .gitignore
python-webassets/: .AURINFO
python2-pam/: PKGBUILD
repos/community-x86_64/: .SRCINFO  0.4.7-private-mode.patch  0.6.10-git-fixes.patch  0001-Add-better-integration-for-Linux.patch  0001-Add-support-for-compiling-with-c-11.patch  0001-Add-support-for-conversion-and-selection-of-WEBP-ima.patch  0001-Add-support-for-reproducible-builds.patch  0001-Add-the-GNOME-Flashback-session.patch  0001-Audit-includes.patch  0001-Better-handling-the-background-of-logout-dialog.patch  0001-Change-libotr-4.0.0-code-to-use-only-OTR-spec-v2.patch  0001-Disable-online-version-check.patch  0001-Don-t-use-electron-to-build.patch  0001-Don-t-wrap-gdl_dock_layout_get_layouts_ui.patch  0001-Dont-mark-desktop-file-as-executable.patch  0001-Fix-AppStream-metadata-validation.patch  0001-Fix-docbook-file.patch  0001-Fix-unique-app-handling.patch  0001-Fixes-to-the-appdata-file.patch  0001-Handle-Request.Host-containing-the-server-port.patch  0001-Maintain-current-contextIsolation-behavior-across-el.patch  0001-Makefile-Remove-version-from-usr-share-makedumpfile.patch  0001-Modernize-autotools.patch  0001-Multiple-changes-to-build-and-run-with-libsoup-3.0.patch  0001-Port-to-GStreamer-1.0.patch  0001-Port-to-mutter-3-from-GNOME-3.30.patch  0001-Remove-dependency-on-GConf.patch  0001-Set-noexecstack-on-linker-generated-binary-data-files.patch  0001-Support-sphinx-1.7-while-still-working-with-1.7.patch  0001-cinnamon-settings-don-t-rely-on-the-presence-of-cinn.patch  0001-cs_user.py-Add-compatibility-for-multiple-pam-module.patch  0001-dbus-sys-dir.patch  0001-fix-build-on-python-3.7.patch  0001-fix-build-with-kernel-4.7.patch  0001-fix-install_fcitx-translation-files.patch  0001-fix_compiler_warning_in_pam_test_c.patch  0001-libssh.patch  0001-media-Fix-usage-of-application-id.patch  0001-menus-Don-t-exclude-any-desktop-files.patch  0001-nsenter-clone-proc-self-exe-to-avoid-exposing-host-b.patch  (+898 more)
repos/community-x86_64/aspell-ca/CVS/: Root
repos/community-x86_64/community-x86_64/: PKGBUILD
repos/community-x86_64/examples/CVS/: Entries
repos/community-x86_64/keys/pgp/: 09B9C8FF223EF113AFA06A39EE926C2BDACC177B.asc  16B6B7CACAF339DECE9F154729317348D687B86B.asc  1808CB466328F4380685A3B1A264FD738D861F41.asc  1B79C8478F236DCDADC0D6ACCF159707377919AE.asc  1D5791352D51A228D4DDDBA4521E5E03AEBCA1A7.asc  206D3B352F566F3B0E6572E997D9123DE37A484F.asc  21BC42D38D1B03BE59F7A8F15016D150EA64A3D9.asc  23EF1DD76E65248FB055201ADAFE84E63D140114.asc  29D0817A67156E4F25DC24782A349DD577D586A5.asc  2CC8A0609AD2A479C65B6D5C8E8B898CBF2412F9.asc  2DE9541A85CC87D5D9836D5E0C8A47A2ABD72DF9.asc  2E36D8620221482FC45CB7F2A91764759326B440.asc  360B658707A1A44CA57FB67EEF0BA1C4F3990103.asc  4100929B33EEB0FD1DB852797BC79407090047CA.asc  42007E876F248E04A3F2FE25AE4548D043DEC7C3.asc  42400AF5EB2A17F0A69BB551E9899D784A977416.asc  426DA722C9ED3DDF28557E3D1F23F99E99873FBA.asc  4F60BCD32573AB28D84FD0C4CCF75EB2BBF8F69C.asc  5488AC3CCC463028E9CD93FF61D8496346F161CB.asc  57E4D43C10CD7EDB8360C84774FFC7F02C4F6B37.asc  5EF3A41171BB77E6110ED2D01F3D03348DB1A3E2.asc  5F36C6C61B5460124A75F5A69E18AA267DDB8DB4.asc  602F567663E593BCBD14F338C638974D64792D67.asc  60C5A596A37CDE6C357C5C623136D252B5E85FA9.asc  67E00C8AE6DEE3486468F6C6E20D29536F5C037F.asc  6B1A7447AAF091CCDD36BAA6015E339411694A6E.asc  72B6C05CDFF309C6396167D464EF02821CAFF810.asc  7733B98B987784DF27707D41F8E544EC485EE7BC.asc  782130B4C9944247977B82FD6EA4D2311A2D268D.asc  83DCD17F44B22CC83656EDA1E8446B4AC8C77261.asc  8405B02FCC28EF9744C8F253FE82139440BD22B9.asc  987AEFC56E70D68440C0D45149241DE2BA57F699.asc  A25156FC7AFB5C0365A0407E6F5DD1C5371DE665.asc  A262040D27F5F4700D097A02CF651F44EF65072E.asc  AADF2EDF5529F1702772C8A2DEC4D246931EF49B.asc  AD87109763D8D8C2C94CBA8065C26E471F45B123.asc  B74417EDDF22AC9F9E90F49142E86A2A11F48D36.asc  B8B1756A0DDBF0760CE67CCF4ED6CD61932B9EBE.asc  BB1838728F40B7E63BFCD67AE52707E90485EFCD.asc  BCA0C5C309CAC569E74A921CF76EFE5D0C223A8F.asc  (+8 more)
textedit/: PKGBUILD
trunk/: .SRCINFO  00-fix-readonly.patch  0001-Add-missing-icon.patch  0001-Add-missing-icons.patch  0001-Add-the-GNOME-Flashback-session.patch  0001-Don-t-use-deprecated-vte_terminal_match_add_gregex.patch  0001-Don-t-use-electron-to-build.patch  0001-Filter-out-too-large-boxes-on-selection.patch  0001-Fix-238-build.patch  0001-Fix-5016-crashed-when-recommonmark.AutoStrictify-is-.patch  0001-Fix-AppStream-metadata-validation.patch  0001-Fix-Open-With-default-application-with-glib-2.41.patch  0001-Fix-incorrect-documentation-that-prevents-successful.patch  0001-Fix-msgpack-version-constraints-using-proper-setupto.patch  0001-Fix-narrowing-conversion-error.patch  0001-Hack-mpi_x64.s-to-work-with-fno-plt.patch  0001-Python-3-port.patch  (+1339 more)
(+47979 files in other folders)
