host_cpu="x64"
target_os="linux"
is_component_build=false
is_debug=false
is_clang=false
symbol_level=2
proprietary_codecs=true
use_custom_libcxx=true
use_system_libjpeg=true
use_rtti=true
use_gold=false
use_sysroot=false
linux_use_bundled_binutils=false
enable_dsyms=false
rtc_include_tests=false
rtc_build_examples=false
rtc_build_tools=false
rtc_build_opus=false
rtc_build_ssl=false
rtc_ssl_root="/usr/include/openssl/"
rtc_ssl_libs=["/usr/lib/libssl.so.1.1","/usr/lib/libcrypto.so.1.1","/usr/lib/libdl.so.2","/usr/lib/libpthread.so.0"]
rtc_builtin_ssl_root_certificates=true
rtc_build_ffmpeg=false
rtc_ffmpeg_root="../../../ffmpeg"
rtc_ffmpeg_libs=["/usr/lib/libavfilter.so.7.85.100","/usr/lib/libswscale.so.5.7.100","/usr/lib/libswresample.so.3.7.100","/usr/lib/libavutil.so.56.51.100","/usr/lib/libva-x11.so.2.800.0","/usr/lib/libva-drm.so.2.800.0","/usr/lib/libva.so.2.800.0","/usr/lib/libvdpau.so.1.0.0","/usr/lib/libdrm.so.2.4.0","/usr/lib/libXfixes.so.3.1.0","/usr/lib/libXext.so.6.4.0","/usr/lib/libX11.so.6.3.0","/usr/lib/libxcb.so.1.1.0","/usr/lib/libXau.so.6.0.0","/usr/lib/libXdmcp.so.6.0.0","/usr/lib/libdbus-1.so.3.19.13"]
rtc_opus_root="/usr/include/opus"
rtc_enable_protobuf=false
treat_warnings_as_errors=false
