host_cpu="x64"
target_os="linux"
is_component_build=false
is_debug=false
is_clang=false
symbol_level=2
proprietary_codecs=true
use_custom_libcxx=true
use_system_libjpeg=true
use_rtti=true
use_gold=false
use_sysroot=false
linux_use_bundled_binutils=false
enable_dsyms=false
rtc_include_tests=false
rtc_build_examples=false
rtc_build_tools=false
rtc_build_opus=false
rtc_build_ssl=false
rtc_ssl_root="/usr/include/openssl/"
rtc_ssl_libs=["/usr/lib/libssl.so","/usr/lib/libcrypto.so","/usr/lib/libdl.so","/usr/lib/libpthread.so"]
rtc_builtin_ssl_root_certificates=true
rtc_build_ffmpeg=false
rtc_ffmpeg_root="../../../ffmpeg"
rtc_ffmpeg_libs=["/usr/lib/libavfilter.so","/usr/lib/libswscale.so","/usr/lib/libswresample.so","/usr/lib/libavutil.so","/usr/lib/libva-x11.so","/usr/lib/libva-drm.so","/usr/lib/libva.so","/usr/lib/libvdpau.so","/usr/lib/libdrm.so","/usr/lib/libXfixes.so","/usr/lib/libXext.so","/usr/lib/libX11.so","/usr/lib/libxcb.so","/usr/lib/libXau.so","/usr/lib/libXdmcp.so","/usr/lib/libdbus-1.so"]
rtc_opus_root="/usr/include/opus"
rtc_enable_protobuf=false
treat_warnings_as_errors=false
